<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" 
    android:background="@drawable/template">

    <TextView
        android:id="@+id/pick_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="@string/pick_photo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="129dp"
        android:layout_height="129dp"
        android:src="@drawable/nophoto" 
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/image_description"
        android:onClick="onClickPickImage"
        android:clickable="true"/>

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user"

        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:maxLines="1"
        android:password="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_confirm_password"
        android:password="true"

        android:maxLines="1" />

    <TextView
        android:id="@+id/certificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:text="@string/certificate"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/button_pick_certificate"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@drawable/certificate"
        android:onClick="onClickButtonPickCertificate"
        android:text="@string/choose_certificate" 
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/button_done"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:onClick="onClickButtonDone"
        android:text="@string/done" />

</LinearLayout>