<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/template"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_container_bl"
        android:orientation="vertical"
        android:padding="10sp" >

        <TextView
            android:id="@+id/Text_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shadowColor="#888"
            android:shadowDy="1.0"
            android:shadowRadius="1"
            android:text="@string/servers"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="333dp"
        android:layout_weight="0.36"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_accept"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="56dp"
            android:onClick="onClickButtonAccept"
            android:text="@string/button_accept" />

        <Button
            android:id="@+id/button_clean"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_accept"
            android:layout_alignBottom="@+id/button_accept"
            android:layout_alignParentRight="true"
            android:onClick="onClickButtonClean"
            android:text="@string/button_clean" />

        <EditText
            android:id="@+id/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/service"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:hint="@string/host"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/host"
            android:layout_marginTop="19dp"
            android:layout_toRightOf="@+id/button_accept"
            android:hint="@string/port"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/label_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/port"
            android:layout_alignBottom="@+id/port"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:text="@string/port"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/host"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="17dp"
            android:layout_toRightOf="@+id/button_accept"
            android:hint="@string/service"
            android:inputType="number" />

        <TextView
            android:id="@+id/label_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/service"
            android:layout_alignBottom="@+id/service"
            android:text="@string/service"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/host"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="16dp" />
    </RelativeLayout>

</LinearLayout>