<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/android_chat"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="Host/Port:"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="150dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/default_host"
            android:textColor="@color/negro"
            android:textSize="16sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="80dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/default_port"
            android:textColor="@color/negro"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="Service:"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/default_service"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="Userid:"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/userid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/default_userid"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:text="Password:"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:capitalize="none"
            android:minWidth="250dp"
            android:password="true"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="OK" />

</LinearLayout>
